# CEDICA-Proyecto-De-Software-2024

./: README.md
admin/: .env.template  .gitignore  README.md  app.py  package-lock.json  pyproject.toml
admin/src/core/: User.py  admin_data.py  bcrypt_y_session.py  bcrypy_and_session.py  config.py  database.py  oauth.py  storage.py
admin/src/core/enums/: equestrian_enum.py  message.py  permission_enums.py  user_roles.py
admin/src/core/models/: Empleado.py  Payment.py  client.py  collection.py  empleado.py  employee.py  message.py  publication.py
admin/src/core/services/: PaymentService.py  client_service.py  collection_service.py  empleado_service.py  employee_service.py  equestrian_service.py  message_service.py  permission_service.py  publication_service.py  reports_service.py  role_service.py  user_service.py
admin/src/core/users/: __init__.py
admin/src/web/: __init__.py  querys.txt  utils.py
admin/src/web/controllers/: api_controller.py  client_controller.py  collection_controller.py  contact_controller.py  csv_downloader_controller.py  employee_controller.py  equestrian_controller.py  payment_controller.py  publication_controller.py  reports_controller.py  session_controller.py  user_controller.py
admin/src/web/forms/: search_form.py
admin/src/web/handlers/: __init__.py  auth.py  error.py  validations.py
admin/src/web/schemas/: publication_schema.py
admin/src/web/templates/: delete_button.html  delete_button_archivos.html  detail.html  detail_with_targets.html  different_detail.html  error.html  form.html  (+12 more)
admin/static/: error.css  style.css
(+91 files in other folders)
